# tiny_backend_practice

./: README.md  main.py  notes.org  plan.org  pyproject.toml  test_server.sh
receipt_tracking/: database.py  models.py
